# pyexcelize

./: .gitignore  MANIFEST.in  README.md  go.mod  go.sum  main.go  py-excelize.h  pyexcelize.py  pyproject.toml  requirements.txt  setup.py
tests/: excelize_only.go  perform_openpyxl.py  template.xlsx  test_pyexcelize.py
