[tool.poetry]
name = "pyexcelize"
version = "0.1.0"
description = "Calling the Go library Excelize from Python"
authors = ["Inunekousapon <j.yukawa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
